[Fixes #61586946] - Identity Tile Footer Needs To Hide Overflow
Fixed CSS in identity tile footer.
Also fixed splash tile css issue caused by new identity footer css.

--- a/web/knotis/contrib/layout/static/knotis/layout/css/tile.css
+++ b/web/knotis/contrib/layout/static/knotis/layout/css/tile.css
@@ -94,8 +94,8 @@ div.grid-tile.small-tile div.tile-body p.tile-nobutton {
 div.grid-tile.small-tile div.tile-footer {
     border-top: 1px solid #D8D9D8;
     background-color: #F4F5F5;
-    height: 21px;
-    margin-top: 12px;
+    height: 22px;
+    margin-top: 11px;
     padding-top: 8px;
     display: inline-block;
     width: 100%;
@@ -103,6 +103,8 @@ div.grid-tile.small-tile div.tile-footer {
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px 0px 2px 2px;
     border-radius: 0px 0px 2px 2px; 
+    overflow: hidden;
+    vertical-align: middle;
 }
 
 div.grid-tile.small-tile.splash-tile {
@@ -111,7 +113,7 @@ div.grid-tile.small-tile.splash-tile {
 
 div.grid-tile.small-tile.splash-tile > .tile-body {
     color: #fff;
-    height: 300px;
+    height: 283px;
 }
 
 div.grid-tile.small-tile.splash-tile > .tile-body > .tile-text-header {
